# A003-POETRY-SETUP

./: .env.example  pyproject.toml  zzz-nb002-student-setup-after-downloading-code.ipynb
.ipynb_checkpoints/: zzz-nb000-instructor-setup-before-lesson-checkpoint.ipynb  zzz-nb001-poetry-vs-pyenv-checkpoint.ipynb  zzz-nb002-student-setup-after-downloading-code-checkpoint.ipynb  zzz-nb003-template-for-new-notebook-checkpoint.ipynb
